# simple-360-video-player

./: CMakeLists.txt  README.md  contributors.txt
CL/: CMakeLists.txt
CL/math/: CL_LinearAlgebra.cpp  CMakeLists.txt
CL/math/include/: CL_LinearAlgebra.hpp
CL/shapes/: CL_Shape.cpp  CL_Sphere.cpp  CMakeLists.txt
CL/test/: CL_LinearAlgebraTest.cpp  CL_SphereTest.cpp  CMakeLists.txt
CL/videoplayer/: CL_VideoLibraryFfmpegImpl.cpp  CL_VideoPlayerApp - Copy.cpp  CL_VideoPlayerApp.cpp  CMakeLists.txt
CL/videoplayer/common/: shader.cpp
include/shapes/: CL_Shape.hpp  CL_Sphere.hpp
include/videoplayer/: CL_VideoLibrary.hpp
